# pond

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_VIOLATIONS.md  CONTRIBUTING.md  CREATE_INSTANCE_WITH_CONFIG.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_REVIEW_SUMMARY.md  INSTANCE_CREATION_FINAL.md  INSTANCE_CREATION_FIX.md  LICENSE  OPTIMIZATION_NOTES.md  PERFORMANCE_REVIEW.md  README.md  README_zh.md  RELEASING.md  REMAINING_ISSUES.md  SECURITY.md  USER_INTERACTION_TEST.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.cursor/rules/: SUMMARY.md  naming-conventions.md  no-agent-id-as-instance-id.md  (+3 more)
.github/: pull_request_template.md
docs/: badges.md
scripts/: apply-agent-view-i18n.mjs  bundle-tauri-resources.mjs  models-catalog-en.mjs  patch-agent-view-jsx.mjs  prepare-app-icon.mjs  strip-models-ts.mjs  write-agent-view-locales.mjs  write-models-catalog-json.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/bundled_skills/clawteam-collab/: SKILL.md
src-tauri/resources/bundled_skills/pond-team/: SKILL.md
src-tauri/src/: lib.rs  main.rs  models_pricing.rs
src-tauri/src/commands/: channel_cli.rs  chat.rs  config.rs  cron_jobs.rs  diagnostics.rs  gateway.rs  instance_cleanup.rs  mod.rs  skills.rs  spend.rs  tailscale.rs  team_meta.rs  team_tasks.rs  tray_menu.rs  workspace.rs  ws_gateway.rs
src-tauri/src/types/: ids.rs
src-tauri/src/utils/: paths.rs  process.rs
(+135 files in other folders)
