[package]
name = "pond"
version = "1.0.6"
description = "Desktop control plane for OpenClaw (Tauri shell)."
authors = ["ClawHub"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tageecc/pond"

[lib]
name = "pond_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
zip = "2"
anyhow = "1"
sysinfo = "0.31"
chrono = "0.4"
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = "0.10.9"
base64 = "0.22.1"
uuid = { version = "1.22.0", features = ["v4"] }
fs4 = "0.12"
hex = "0.4.3"
getrandom = "0.4.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

